fix z-indexing

--- a/app/components/BioCarousel/BioCarousel.css
+++ b/app/components/BioCarousel/BioCarousel.css
@@ -1,4 +1,5 @@
 .embla {
+  z-index: 1;
   overflow: hidden;
   max-width: 500px;
 }
